--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: socialhub-service
+  name: mysocialhub-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
-    app: socialhub
+    app: mysocialhub
   ports:
     - port: 80
       targetPort: 80
-      nodePort: 30080
